# molar

./: .gitignore  .gitlab-ci.yml  .isort.cfg  .readthedocs.yml  Dockerfile  Dockerfile.backend  Dockerfile.ignore  LICENSE  Makefile  README.md  Untitled.ipynb  db_remote.conf  docker-compose.yml  entrypoint.sh  entrypoint_ignore.sh  setup.cfg  setup.py
data/: postmaster.pid
data/base/13407/: 2619
data/global/: 1260  1262  2671  2672  2676  pg_control
data/pg_stat_tmp/: global.stat
db/postgres/: postmaster.pid
db/postgres/global/: 1260  (+4 more)
docs/: 01_installation.rst  02_accessing_the_database.rst  02_client_usage.ipynb  03_backend_usage.ipynb  03_writing_data.ipynb  04_client_api.rst  04_reading_data.ipynb  05_event_sourcing.ipynb  06_schema.rst  07_client_api.rst  08_contributing.rst  09_admin_guide.rst  Examples.ipynb  FAQ.ipynb  api.rst  conf.py  index.rst  schema.rst
docs/_static/: schema.eps  schema.graphviz  schema.ps
goldmine/: __init__.py  app.py  client.py
mdb/: __init__.py  client.py  config.py  database.py  mapper.py  models.py  registry.py  ssh.py  utils.py
mdb/api/: deps.py
mdb/backend/: main.py  utils.py
mdb/cli/: admin.py  alembic_utils.py  cli.py  cli_utils.py  click.py  sql_utils.py
mdb/database/: __init__.py  database.py  register.py
mdb/mappers/: molecule.py
mdb/migrations/: env.py
mdb/pgsql/: event_sourcing.sql
mdb/sql/: event_sourcing.sql
migrations/: env.py
migrations/versions/: 03838e8c68e4_removing_atom_table.py  0a9e767f0c66_removing_id_and_making_uuid_the_new_.py  10209c22a30e_altering_calculation_tables.py  3a689fa4406c_removing_the_need_of_a_user_in_the_.py  4f9307d07ff9_synthesis_xdl_type_test_xml.py  9166672ddef8_modification_from_the_workshop.py  9c6c741aec6b_adding_experimental_data_scheme.py  c9a2abe13001_changing_name_conformation_conformer_.py
molar/: __init__.py  client.py  client_config.py  client_interface.py  config.py  exceptions.py  install.py  interface_client.py  registry.py
molar/backend/: alembic_utils.py  entrypoint.sh  main.py  utils.py
molar/cli/: alembic_utils.py  cli.py  cli_utils.py  sql_utils.py
molar/database/: register.py
molar/docker/: docker-compose.yml
molar/mappers/: __init__.py  molecule.py
molar/migrations/: env.py  script.py.mako
molar/pgsql/: postgresql.conf
molar/sql/: event_sourcing.sql  information_query.sql  synthesis_hid.sql
pgsql/: event_sourcing.sql  setup.sh  structure.sql
pgsql/tests/: test_eventsourcing.sql
runtime/: env-defaults  functions
tests/: alembic.ini.test  test_argument_fetcher.py  test_client.py  test_dac.py  test_schema_mapper.py  test_utils.py
tests/client/: conftest.py  test_client.py
(+93 files in other folders)
