[metadata]
name = molar
version = attr: molar.__version__
description = "A database to store chemical data"
long_description = file: README.md
author = "Theophile Gaudin", "Ian Benlolo", "Zheng Yu Cui"
author_email = "theophile.gaudin@gmail.com"
url = https://github.com/aspuru-guzik-group/molar
license = MIT
keywords = chemistry, molecule, synthesis, database, postgres, rest, api
classifiers = 
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
install_requires = 
  Click >= 7.0
  rich >= 10.1.0
  numpy >= 1.20.1
  pandas >= 1.2.3

[options.extras_require]
tests = 
  pytest
backend =
  alembic >= 1.6.3
  emails >= 0.6
  pydantic[email] >= 1.8.2
  python-multipart >= 0.0.5
  python-jose[cryptography] >= 3.2.0
  pytz >= 2019.3
  psycopg2-binary >= 2.8.6
  passlib >= 1.7.4
  SQLAlchemy >= 1.4.15
  bcrypt >= 3.2.0
  fastapi >= 0.63.0
  docker >= 4.4.4

[options.entry_points]
console_scripts =
  molarcli = molar.cli:cli
